<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/drug_name"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/diag_drugName"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/drugDosage"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/diag_drugDosage"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/drug_duration"

        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/diag_usageInterval"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:layout_above="@+id/textView5"
        android:layout_toRightOf="@+id/diag_drugName"
        android:layout_toEndOf="@+id/diag_drugName"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/usageInterval"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:textColor="@color/primary_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/diag_drugDuration"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/diag_drugDosage"
        android:layout_toEndOf="@+id/diag_drugDosage"/>

</RelativeLayout>